[project]
name = "i-failsense"
version = "0.1.0"
description = "VLM-based binary failure classifier for robot manipulation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.2",
    "huggingface-hub>=1.7.1",
    "matplotlib>=3.10.8",
    "peft>=0.18.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "transformers>=5.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
failsense-evaluate  = "i_failsense.evaluate:main"
failsense-train-fs  = "i_failsense.finetune_FS:main"
failsense-train-vlm = "i_failsense.finetune_VLM:main"
